# abstract-vm

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_commands.json  example.avm  grammar.txt  main.cpp
avm-arithmetic/: checked_arithmetic.hpp
avm-exceptions/: ParserException.cpp  ParserException.hpp  VmException.cpp  VmException.hpp
avm-fmt/: Formatter.cpp  Formatter.hpp
avm-lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
avm-lib/: InputHandler.cpp  InputHandler.hpp  utils.cpp  utils.hpp
avm-operand/: Operand.hpp
avm-parser/: Instruction.hpp  Parser.cpp  Parser.hpp  VmValue.hpp
avm-tests/: example2.avm  integration_test.py  tests.cpp
avm-virtual-machine/: InputHandler.cpp  InputHandler.hpp  Vm.cpp  Vm.hpp
exceptions/: LexerException.hpp  ParserException.cpp  ParserException.hpp  VmException.cpp  VmException.hpp  customExceptions.cpp  customExceptions.hpp
lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
operand/: IOperand.hpp  Operand.cpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp
parser/: Instruction.hpp  Parser.cpp  Parser.hpp  VmValue.hpp
scripts/: install_dependencies.py
src/: lib.rs  main.rs
tests/: example.avm.input  example.avm.output  integration_test.py  tests.cpp
vm/: InputHandler.cpp  InputHandler.hpp  Vm.cpp  Vm.hpp
